--- a/english.html
+++ b/english.html
@@ -1,216 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>English Quiz</title>
-    <style>
-        body { font-family: Arial, sans-serif; padding: 20px; }
-        .question { margin-bottom: 20px; }
-        .answers input[type="radio"] { transform: scale(1.5); margin-right: 10px; }
-        button { padding: 15px 30px; font-size: 16px; margin-top: 20px; }
-        .feedback { margin-top: 10px; color: green; }
-        .explanation { color: #555; }
-    </style>
-</head>
-<body>
-    <h1>English Quiz</h1>
-    <form id="quizForm">
+<html><head><title>English Quiz</title></head><body><h1>English Quiz</h1><form id="quizForm"><p>1. Which word is a noun?</p><label><input type="checkbox" name="q0" value="Run"> Run</label><br><label><input type="checkbox" name="q0" value="Blue"> Blue</label><br><label><input type="checkbox" name="q0" value="Happiness"> Happiness</label><br><label><input type="checkbox" name="q0" value="Quickly"> Quickly</label><br><p>2. Which is the correct past tense of 'go'?</p><label><input type="checkbox" name="q1" value="Goes"> Goes</label><br><label><input type="checkbox" name="q1" value="Went"> Went</label><br><label><input type="checkbox" name="q1" value="Goed"> Goed</label><br><label><input type="checkbox" name="q1" value="Going"> Going</label><br><p>3. Choose the correct synonym for 'happy'.</p><label><input type="checkbox" name="q2" value="Sad"> Sad</label><br><label><input type="checkbox" name="q2" value="Angry"> Angry</label><br><label><input type="checkbox" name="q2" value="Joyful"> Joyful</label><br><label><input type="checkbox" name="q2" value="Tired"> Tired</label><br><br><button type="button" style="font-size: 20px;" onclick="submitQuiz()">Submit</button></form><div id="results"></div>
+<script>
+function submitQuiz() {
+    let form = document.forms['quizForm'];
+    let results = document.getElementById('results');
+    results.innerHTML = "";
+    let feedback = "";
 
-        <div class="question">
-            <p><strong>Question 1:</strong> This is a sample english question 1?</p>
-            <div class="answers">
-                <label><input type="radio" name="q1" value="a"> Option A</label><br>
-                <label><input type="radio" name="q1" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q1" value="c"> Option C</label><br>
-                <label><input type="radio" name="q1" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback1"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 2:</strong> This is a sample english question 2?</p>
-            <div class="answers">
-                <label><input type="radio" name="q2" value="a"> Option A</label><br>
-                <label><input type="radio" name="q2" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q2" value="c"> Option C</label><br>
-                <label><input type="radio" name="q2" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback2"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 3:</strong> This is a sample english question 3?</p>
-            <div class="answers">
-                <label><input type="radio" name="q3" value="a"> Option A</label><br>
-                <label><input type="radio" name="q3" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q3" value="c"> Option C</label><br>
-                <label><input type="radio" name="q3" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback3"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 4:</strong> This is a sample english question 4?</p>
-            <div class="answers">
-                <label><input type="radio" name="q4" value="a"> Option A</label><br>
-                <label><input type="radio" name="q4" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q4" value="c"> Option C</label><br>
-                <label><input type="radio" name="q4" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback4"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 5:</strong> This is a sample english question 5?</p>
-            <div class="answers">
-                <label><input type="radio" name="q5" value="a"> Option A</label><br>
-                <label><input type="radio" name="q5" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q5" value="c"> Option C</label><br>
-                <label><input type="radio" name="q5" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback5"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 6:</strong> This is a sample english question 6?</p>
-            <div class="answers">
-                <label><input type="radio" name="q6" value="a"> Option A</label><br>
-                <label><input type="radio" name="q6" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q6" value="c"> Option C</label><br>
-                <label><input type="radio" name="q6" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback6"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 7:</strong> This is a sample english question 7?</p>
-            <div class="answers">
-                <label><input type="radio" name="q7" value="a"> Option A</label><br>
-                <label><input type="radio" name="q7" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q7" value="c"> Option C</label><br>
-                <label><input type="radio" name="q7" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback7"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 8:</strong> This is a sample english question 8?</p>
-            <div class="answers">
-                <label><input type="radio" name="q8" value="a"> Option A</label><br>
-                <label><input type="radio" name="q8" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q8" value="c"> Option C</label><br>
-                <label><input type="radio" name="q8" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback8"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 9:</strong> This is a sample english question 9?</p>
-            <div class="answers">
-                <label><input type="radio" name="q9" value="a"> Option A</label><br>
-                <label><input type="radio" name="q9" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q9" value="c"> Option C</label><br>
-                <label><input type="radio" name="q9" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback9"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 10:</strong> This is a sample english question 10?</p>
-            <div class="answers">
-                <label><input type="radio" name="q10" value="a"> Option A</label><br>
-                <label><input type="radio" name="q10" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q10" value="c"> Option C</label><br>
-                <label><input type="radio" name="q10" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback10"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 11:</strong> This is a sample english question 11?</p>
-            <div class="answers">
-                <label><input type="radio" name="q11" value="a"> Option A</label><br>
-                <label><input type="radio" name="q11" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q11" value="c"> Option C</label><br>
-                <label><input type="radio" name="q11" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback11"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 12:</strong> This is a sample english question 12?</p>
-            <div class="answers">
-                <label><input type="radio" name="q12" value="a"> Option A</label><br>
-                <label><input type="radio" name="q12" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q12" value="c"> Option C</label><br>
-                <label><input type="radio" name="q12" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback12"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 13:</strong> This is a sample english question 13?</p>
-            <div class="answers">
-                <label><input type="radio" name="q13" value="a"> Option A</label><br>
-                <label><input type="radio" name="q13" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q13" value="c"> Option C</label><br>
-                <label><input type="radio" name="q13" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback13"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 14:</strong> This is a sample english question 14?</p>
-            <div class="answers">
-                <label><input type="radio" name="q14" value="a"> Option A</label><br>
-                <label><input type="radio" name="q14" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q14" value="c"> Option C</label><br>
-                <label><input type="radio" name="q14" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback14"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 15:</strong> This is a sample english question 15?</p>
-            <div class="answers">
-                <label><input type="radio" name="q15" value="a"> Option A</label><br>
-                <label><input type="radio" name="q15" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q15" value="c"> Option C</label><br>
-                <label><input type="radio" name="q15" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback15"></div>
-        </div>
-
-        <button type="button" onclick="submitQuiz()">Submit</button>
-    </form>
-
-    <script>
-    let attemptCounts = Array(16).fill(0);
-    function submitQuiz() {
-        for (let i = 1; i <= 15; i++) {
-            let correct = "b";
-            let options = document.getElementsByName("q" + i);
-            let selected = null;
-            for (let opt of options) {
-                if (opt.checked) selected = opt.value;
-            }
-            let feedback = document.getElementById("feedback" + i);
-            if (!selected) {
-                feedback.innerHTML = "Please select an answer.";
-                continue;
-            }
-            if (selected === correct) {
-                feedback.innerHTML = "Correct!";
-            } else {
-                attemptCounts[i] += 1;
-                if (attemptCounts[i] >= 2) {
-                    feedback.innerHTML = "Incorrect again. Correct answer is B. <span class='explanation'>Because it’s the most accurate option.</span>";
-                } else {
-                    feedback.innerHTML = "Incorrect. Try again.";
-                }
-            }
-        }
+    let q0Checked = Array.from(form['q0']).filter(cb => cb.checked).map(cb => cb.value);
+    if (!q0Checked.includes("Happiness")) {
+        feedback += "<p><strong>Question 1:</strong> Correct answer is: Happiness. Explanation: 'Happiness' is a noun.</p>";
     }
-    </script>
-</body>
-</html>
+
+    let q1Checked = Array.from(form['q1']).filter(cb => cb.checked).map(cb => cb.value);
+    if (!q1Checked.includes("Went")) {
+        feedback += "<p><strong>Question 2:</strong> Correct answer is: Went. Explanation: The correct past tense of 'go' is 'went'.</p>";
+    }
+
+    let q2Checked = Array.from(form['q2']).filter(cb => cb.checked).map(cb => cb.value);
+    if (!q2Checked.includes("Joyful")) {
+        feedback += "<p><strong>Question 3:</strong> Correct answer is: Joyful. Explanation: 'Joyful' is a synonym for 'happy'.</p>";
+    }
+
+    if (feedback) {
+        results.innerHTML = "<h2>Feedback:</h2>" + feedback;
+    } else {
+        results.innerHTML = "<h2>All answers correct! Great job!</h2>";
+    }
+}
+</script>
+</body></html>
