--- a/math.html
+++ b/math.html
@@ -1,216 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Math Quiz</title>
-    <style>
-        body { font-family: Arial, sans-serif; padding: 20px; }
-        .question { margin-bottom: 20px; }
-        .answers input[type="radio"] { transform: scale(1.5); margin-right: 10px; }
-        button { padding: 15px 30px; font-size: 16px; margin-top: 20px; }
-        .feedback { margin-top: 10px; color: green; }
-        .explanation { color: #555; }
-    </style>
-</head>
-<body>
-    <h1>Math Quiz</h1>
-    <form id="quizForm">
+<html><head><title>Math Quiz</title></head><body><h1>Math Quiz</h1><form id="quizForm"><p>1. What is 7 + 6?</p><label><input type="checkbox" name="q0" value="12"> 12</label><br><label><input type="checkbox" name="q0" value="13"> 13</label><br><label><input type="checkbox" name="q0" value="14"> 14</label><br><label><input type="checkbox" name="q0" value="15"> 15</label><br><p>2. What is the square root of 49?</p><label><input type="checkbox" name="q1" value="6"> 6</label><br><label><input type="checkbox" name="q1" value="7"> 7</label><br><label><input type="checkbox" name="q1" value="8"> 8</label><br><label><input type="checkbox" name="q1" value="9"> 9</label><br><p>3. What is 10 * 3?</p><label><input type="checkbox" name="q2" value="20"> 20</label><br><label><input type="checkbox" name="q2" value="30"> 30</label><br><label><input type="checkbox" name="q2" value="40"> 40</label><br><label><input type="checkbox" name="q2" value="50"> 50</label><br><br><button type="button" style="font-size: 20px;" onclick="submitQuiz()">Submit</button></form><div id="results"></div>
+<script>
+function submitQuiz() {
+    let form = document.forms['quizForm'];
+    let results = document.getElementById('results');
+    results.innerHTML = "";
+    let feedback = "";
 
-        <div class="question">
-            <p><strong>Question 1:</strong> This is a sample math question 1?</p>
-            <div class="answers">
-                <label><input type="radio" name="q1" value="a"> Option A</label><br>
-                <label><input type="radio" name="q1" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q1" value="c"> Option C</label><br>
-                <label><input type="radio" name="q1" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback1"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 2:</strong> This is a sample math question 2?</p>
-            <div class="answers">
-                <label><input type="radio" name="q2" value="a"> Option A</label><br>
-                <label><input type="radio" name="q2" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q2" value="c"> Option C</label><br>
-                <label><input type="radio" name="q2" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback2"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 3:</strong> This is a sample math question 3?</p>
-            <div class="answers">
-                <label><input type="radio" name="q3" value="a"> Option A</label><br>
-                <label><input type="radio" name="q3" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q3" value="c"> Option C</label><br>
-                <label><input type="radio" name="q3" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback3"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 4:</strong> This is a sample math question 4?</p>
-            <div class="answers">
-                <label><input type="radio" name="q4" value="a"> Option A</label><br>
-                <label><input type="radio" name="q4" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q4" value="c"> Option C</label><br>
-                <label><input type="radio" name="q4" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback4"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 5:</strong> This is a sample math question 5?</p>
-            <div class="answers">
-                <label><input type="radio" name="q5" value="a"> Option A</label><br>
-                <label><input type="radio" name="q5" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q5" value="c"> Option C</label><br>
-                <label><input type="radio" name="q5" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback5"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 6:</strong> This is a sample math question 6?</p>
-            <div class="answers">
-                <label><input type="radio" name="q6" value="a"> Option A</label><br>
-                <label><input type="radio" name="q6" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q6" value="c"> Option C</label><br>
-                <label><input type="radio" name="q6" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback6"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 7:</strong> This is a sample math question 7?</p>
-            <div class="answers">
-                <label><input type="radio" name="q7" value="a"> Option A</label><br>
-                <label><input type="radio" name="q7" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q7" value="c"> Option C</label><br>
-                <label><input type="radio" name="q7" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback7"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 8:</strong> This is a sample math question 8?</p>
-            <div class="answers">
-                <label><input type="radio" name="q8" value="a"> Option A</label><br>
-                <label><input type="radio" name="q8" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q8" value="c"> Option C</label><br>
-                <label><input type="radio" name="q8" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback8"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 9:</strong> This is a sample math question 9?</p>
-            <div class="answers">
-                <label><input type="radio" name="q9" value="a"> Option A</label><br>
-                <label><input type="radio" name="q9" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q9" value="c"> Option C</label><br>
-                <label><input type="radio" name="q9" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback9"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 10:</strong> This is a sample math question 10?</p>
-            <div class="answers">
-                <label><input type="radio" name="q10" value="a"> Option A</label><br>
-                <label><input type="radio" name="q10" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q10" value="c"> Option C</label><br>
-                <label><input type="radio" name="q10" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback10"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 11:</strong> This is a sample math question 11?</p>
-            <div class="answers">
-                <label><input type="radio" name="q11" value="a"> Option A</label><br>
-                <label><input type="radio" name="q11" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q11" value="c"> Option C</label><br>
-                <label><input type="radio" name="q11" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback11"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 12:</strong> This is a sample math question 12?</p>
-            <div class="answers">
-                <label><input type="radio" name="q12" value="a"> Option A</label><br>
-                <label><input type="radio" name="q12" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q12" value="c"> Option C</label><br>
-                <label><input type="radio" name="q12" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback12"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 13:</strong> This is a sample math question 13?</p>
-            <div class="answers">
-                <label><input type="radio" name="q13" value="a"> Option A</label><br>
-                <label><input type="radio" name="q13" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q13" value="c"> Option C</label><br>
-                <label><input type="radio" name="q13" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback13"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 14:</strong> This is a sample math question 14?</p>
-            <div class="answers">
-                <label><input type="radio" name="q14" value="a"> Option A</label><br>
-                <label><input type="radio" name="q14" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q14" value="c"> Option C</label><br>
-                <label><input type="radio" name="q14" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback14"></div>
-        </div>
-
-        <div class="question">
-            <p><strong>Question 15:</strong> This is a sample math question 15?</p>
-            <div class="answers">
-                <label><input type="radio" name="q15" value="a"> Option A</label><br>
-                <label><input type="radio" name="q15" value="b"> Option B (Correct)</label><br>
-                <label><input type="radio" name="q15" value="c"> Option C</label><br>
-                <label><input type="radio" name="q15" value="d"> Option D</label><br>
-            </div>
-            <div class="feedback" id="feedback15"></div>
-        </div>
-
-        <button type="button" onclick="submitQuiz()">Submit</button>
-    </form>
-
-    <script>
-    let attemptCounts = Array(16).fill(0);
-    function submitQuiz() {
-        for (let i = 1; i <= 15; i++) {
-            let correct = "b";
-            let options = document.getElementsByName("q" + i);
-            let selected = null;
-            for (let opt of options) {
-                if (opt.checked) selected = opt.value;
-            }
-            let feedback = document.getElementById("feedback" + i);
-            if (!selected) {
-                feedback.innerHTML = "Please select an answer.";
-                continue;
-            }
-            if (selected === correct) {
-                feedback.innerHTML = "Correct!";
-            } else {
-                attemptCounts[i] += 1;
-                if (attemptCounts[i] >= 2) {
-                    feedback.innerHTML = "Incorrect again. Correct answer is B. <span class='explanation'>Because it’s the most accurate option.</span>";
-                } else {
-                    feedback.innerHTML = "Incorrect. Try again.";
-                }
-            }
-        }
+    let q0Checked = Array.from(form['q0']).filter(cb => cb.checked).map(cb => cb.value);
+    if (!q0Checked.includes("13")) {
+        feedback += "<p><strong>Question 1:</strong> Correct answer is: 13. Explanation: 7 + 6 equals 13.</p>";
     }
-    </script>
-</body>
-</html>
+
+    let q1Checked = Array.from(form['q1']).filter(cb => cb.checked).map(cb => cb.value);
+    if (!q1Checked.includes("7")) {
+        feedback += "<p><strong>Question 2:</strong> Correct answer is: 7. Explanation: The square root of 49 is 7.</p>";
+    }
+
+    let q2Checked = Array.from(form['q2']).filter(cb => cb.checked).map(cb => cb.value);
+    if (!q2Checked.includes("30")) {
+        feedback += "<p><strong>Question 3:</strong> Correct answer is: 30. Explanation: 10 multiplied by 3 equals 30.</p>";
+    }
+
+    if (feedback) {
+        results.innerHTML = "<h2>Feedback:</h2>" + feedback;
+    } else {
+        results.innerHTML = "<h2>All answers correct! Great job!</h2>";
+    }
+}
+</script>
+</body></html>
